Fix: title and circle alignment

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -77,16 +77,16 @@
 .goal-dd-inner {
   width: 24px;
   height: 24px;
-  margin-top: 2.7px;
-  margin-left: 2.2px;
+  margin-top: 2.8px;
+  margin-left: 2.6px;
   border-radius: 50%;
 }
 .goal-dd-outer {
   position: absolute;
   top: 0;
   left: 0;
-  width: 27px;
-  height: 27px;
+  width: 28px;
+  height: 28px;
   border: solid;
   border-width: 1.4px;
   border-radius: 50%;
